@@ -1,3 +1,15 @@
+2010-12-10  Joone Hur  <joone@kldp.org>
+
+        Reviewed by Martin Robinson.
+
+        [GTK] DRT needs layoutTestController.setCacheModel
+        https://bugs.webkit.org/show_bug.cgi?id=50705
+        
+        webkit_set_cache_mode() is called to set the cache model.
+        
+        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
+        (LayoutTestController::setCacheModel): Set the cache model. 
+
 2010-12-10  Tony Chang  <tony@chromium.org>
 
         Reviewed by Ojan Vafai.
